--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -24,11 +24,9 @@
       transform: rotate(360deg) 
 
 @media (prefers-reduced-motion: no-preference)
-  a:nth-of-type(2) .logo
+  a .logo
     animation: logo-spin infinite 20s linear 
 
 .card
-  padding: 2em 
+  padding: 2em
 
-.read-the-docs 
-  color: #888 
